--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,18 +15,16 @@ import { ProjectsData } from "../data/projects";
 			<!-- Todo -->
 			<p>
 				Hi! My name is <b>Tonie Victor</b>. I'm a sofwtare developer with a primary interest in infrastructure, networking and system level software. 
-				Hi! My name is <b>Tonie Victor</b>. I'm a sofwtare developer with a primary interest in infrastructure,
+				Hi! My name is I'm a sofwtare developer with a primary interest in infrastructure,Hi! My name is I'm a sofwtare developer with a primary inte
+				Hi! My name is I'm a sofwtare developer with.
 				<br>
 				<br>
 				networking and system level software. 
 				Hi! My name is <b>Tonie Victor</b>. I'm a sofwtare developer with a primary interest in 
 				infrastructure, networking and system level software. 
+				<br>
+				<br>
 				Hi! My name is <b>Tonie Victor</b>. I'm a sofwtare developer with a primary interest in infrastructure, networking and system level software.
-				<br>
-				<br>
-				Hi! My name is <b>Tonie Victor</b>. I'm a sofwtare developer with a primary interest in infrastructure, networking and 
-				system level software. 
-				Hi! My name is <b>Tonie Victor</b>. I'm a sofwtare developer with a primary interest in infrastructure,
 			</p>
     </section>
 
