--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -14,7 +14,7 @@ import "./nav.css"
 		<a href="https://github.com/tonie-ng" target="_blank" class="social_link">
 			<Icon name="mdi:github"/>
 		</a>
-		<a href="https://twitter.com/Tonie_NG" target="_blank" class="social_link">
+		<a href="https://twitter.com/tonie_ng" target="_blank" class="social_link">
 			<Icon name="mdi:twitter"/>
 		</a>
 		<a href="mailto:toniedevng@gmail.com" class="social_link">
