--- a/src/layout/seo-head.astro
+++ b/src/layout/seo-head.astro
@@ -29,6 +29,8 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary" />
+<!-- Use this for larger image rendering -->
+<!-- <meta property="twitter:card" content="summary_large_image" /> -->
 <meta property="twitter:url" content={Astro.url} />
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
