--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -56,7 +56,6 @@ h5 {
   overflow-x: auto;
   border-radius: 0.5rem;
   width: 100%;
-  text-wrap: wrap;
 }
 
 .blog pre code {
@@ -68,7 +67,7 @@ h5 {
   font-style: italic;
   display: flex;
   border-left: 2px solid #f19e1a;
-  padding: 0.5rem;
+  padding: 0 0.5rem;
   flex-direction: column;
   opacity: 0.9;
 }
