--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -25,9 +25,9 @@ import Back from "../components/Back.astro"
 	}
 
 	.notfound h1 {
-		font-size: 128px;
+		/* font-size: 128px; */
 		font-weight: 900;
-		line-height: 198px;
+		/* line-height: 198px; */
 		color: white
 	}
 
@@ -36,7 +36,6 @@ import Back from "../components/Back.astro"
 	}
 
 	main {
-		height: calc(98vh - 10rem);
 		padding: 2rem var(--padding-x-lg);
 		display: flex;
 		flex-direction: column;
