--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -44,7 +44,11 @@ import Back from "../components/Back.astro"
 
 	@media screen and (max-width: 600px) {
 		.notfound h1 {
-			font-size: 5rem;
+			font-size: 8rem;
+		}
+
+		main {
+			height: calc(90vh - 10rem);
 		}
 	}
 </style>
