--- a/src/layout/seo-head.astro
+++ b/src/layout/seo-head.astro
@@ -28,9 +28,9 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 <meta property="og:image" content={new URL(image, Astro.url)} />
 
 <!-- Twitter -->
-<meta property="twitter:card" content="summary" />
+<!-- <meta property="twitter:card" content="summary" /> -->
 <!-- Use this for larger image rendering -->
-<!-- <meta property="twitter:card" content="summary_large_image" /> -->
+<meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content={Astro.url} />
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
