--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,10 +4,12 @@ import Nav from "../components/Nav.astro"
 import Back from "../components/Back.astro"
 ---
 
-<MainLayout title="404" description="Page not found">
+<MainLayout title="404" description="Page not found" showfooter="false">
   <Nav />
-	<main>
+	<div class="back_div">
 		<Back text="Back" url="/"></Back>
+	</div>
+	<main>
 		<div class="notfound">
 			<h1>404</h1>
 			<p>uhm... this page doesn't exist</p>
@@ -19,9 +21,9 @@ import Back from "../components/Back.astro"
 	.notfound {
 		display: flex;
 		align-items: center;
-		height: 100%;
 		justify-content: center;
 		flex-direction: column;
+		flex: 4;
 	}
 
 	.notfound h1 {
@@ -35,11 +37,15 @@ import Back from "../components/Back.astro"
 		opacity: 0.7;
 	}
 
+	.back_div {
+		padding: 2rem var(--padding-x-lg);
+	}
+
 	main {
 		padding: 2rem var(--padding-x-lg);
 		display: flex;
 		flex-direction: column;
-		gap: 3rem;
+		justify-content: space-around;
 	}
 
 	@media screen and (max-width: 600px) {
@@ -48,7 +54,7 @@ import Back from "../components/Back.astro"
 		}
 
 		main {
-			height: calc(90vh - 10rem);
+			height: calc(80vh - 10rem);
 		}
 	}
 </style>
