--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -1,9 +1,9 @@
 nav {
   display: flex;
   width: 100vw;
-  align-items: baseline;
+	align-items: center;
   justify-content: space-between;
-  padding: 1rem var(--padding-x-lg) 0.6rem;
+  padding: 1rem var(--padding-x-lg);
   position: sticky;
   top: 0;
   background-color: #1a1a1a;
@@ -14,6 +14,9 @@ nav {
 .logo__img {
   width: 2.5rem;
   height: 2.5rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
   border-radius: 50%;
   border: 1.8px solid #ffffff;
 }
@@ -34,6 +37,9 @@ nav {
 
 .social_link {
   font-size: 1.5rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .social_link:hover {
