--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,15 +12,14 @@ import { ProjectsData } from "../data/projects";
 	<Header />
   <main>
     <section class="intro_section">
-			<!-- Todo -->
 			<p>
 				Hi! My name is Tonie Victor, I'm a software developer with a primary interest in system level software, networking, backend infrastructure and distributed systems. 
 				<br>
 				<br>
-				I'm passionate about projects that pique my curiosity and align with my interests, such as developer tools, databases, and distributed systems. I recently started streaming my coding sessions on <a style={{"color": "rgb(119, 44, 232)"}} href="https://www.twitch.tv/tonievictor" target="_blank">Twitch</a> - stop by sometime! I also maintain a <a href="/blog">blog</a> where I share my experiences and understanding of software technologies with both myself and others.
+				I'm passionate about projects that pique my curiosity and align with my interests, such as developer tools, databases, and distributed systems. I recently started streaming my coding sessions on <a style={{"color": "rgb(119, 44, 232)"}} href="https://www.twitch.tv/tonievictor" target="_blank">Twitch</a> - stop by sometime! and I maintain a <a href="/blog">blog</a> where I share my experiences and understanding of software technologies with both myself and others.
 				<br>
 				<br>
-				Outside tinkering with code, I read books, play video games, listen to music and I'm fairly adept at playing football. <a href="" target="_blank">Say Hello!</a>
+				Outside tinkering with code, I read books, play video games, listen to music and I'm fairly adept at playing football. <a href="https://cal.com/tonie-ng/say-hello" target="_blank">Say Hello!</a>
 			</p>
     </section>
 
