feat: added hello article

--- a/src/layout/seo-head.astro
+++ b/src/layout/seo-head.astro
@@ -1,5 +1,6 @@
 ---
 let { title, description, keywords, image } = Astro.props;
+if (!image) image = "/images/profile.jpeg";
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 ---
 
