chore: removed redundant 'a' tag from nav icons

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -11,14 +11,9 @@ import "./nav.css"
 
 	<!-- socials -->
 	<div class="nav__socials">
-		<a href="https://github.com/tonie-ng" target="_blank" class="social_link">
-			<Icon name="mdi:github"/>
-		</a>
-		<a href="https://twitter.com/tonie_ng" target="_blank" class="social_link">
-			<Icon name="mdi:twitter"/>
-		</a>
-		<a href="mailto:toniedevng@gmail.com" class="social_link">
-			<Icon name="mdi:email"/>
+			<Icon name="mdi:github" href="https://github.com/tonie-ng" target="_blank" class="social_link"/>
+			<Icon name="mdi:twitter" href="https://twitter.com/tonie_ng" target="_blank" class="social_link"/>
+			<Icon name="mdi:email" href="mailto:toniedevng@gmail.com" class="social_link"/>
 		</a>
 	</div>
 </nav>
