--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,7 @@ import "./header.css"
 	<div class="nav__menu hidden" id="nav_menu">
 		<a href="/" class="nav_link">~/home</a>
 		<a href="/blog" class="nav_link">~/blog</a>
-		<a href="https://www.twitch.tv/tonievictor" target="_blank" class="nav_link">~/live</a>
+		<a href="/live" target="_blank" class="nav_link">~/live</a>
 	</div>
 	</div>
 </header>
