--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,26 +13,20 @@ import { ProjectsData } from "../data/projects";
   <main>
     <section class="intro_section">
 			<p>
-				Hi! My name is Tonie Victor, I'm a software developer with a primary interest in system level software, networking, backend infrastructure and distributed systems. 
+				Hi! My name is Tonie Victor, I'm a software developer with a primary interest in system level software, networking and backend infrastructure.
 				<br>
+				I recently started streaming my coding sessions on <a style={{"color": "rgb(119, 44, 232)"}} href="https://www.twitch.tv/tonievictor" target="_blank">Twitch</a> - stop by sometime! and I maintain a <a href="/blog">blog</a> where I share my experiences and understanding of software technologies.
 				<br>
-				I'm passionate about projects that pique my curiosity and align with my interests, such as developer tools, databases, and distributed systems. I recently started streaming my coding sessions on <a style={{"color": "rgb(119, 44, 232)"}} href="https://www.twitch.tv/tonievictor" target="_blank">Twitch</a> - stop by sometime! and I maintain a <a href="/blog">blog</a> where I share my experiences and understanding of software technologies with both myself and others.
-				<br>
-				<br>
-				Outside tinkering with code, I read books, play video games, listen to music and I'm fairly adept at playing football. <a href="https://cal.com/tonie-ng/say-hello" target="_blank">Say Hello!</a>
+				Outside tinkering with code, I read books, play video games, listen to music and I'm fairly adept at playing football.
 			</p>
     </section>
 
-    <section id="projects">
+    <section id="projects" class="projects">
       <h2 class="section__title">Projects</h2>
-      <p>
-        Here are some of the projects I've (or still?) worked on.
-      </p>
-
       <div class="project_container">
 				{ProjectsData.map((project) => (
 					<div class="project" >
-							<a target="_blank" href={project.link} class="project_title">{project.title} <Icon name="mdi:arrow-top-right-thin"/></a>
+							<a target="_blank" href={project.link} class="project_title">{project.title} <Icon name="mdi:arrow-top-right-thin" class="project_arrow"/></a>
 							<p>{project.overview}</p>
 							<div class="project_tags">
 								{project.tags.map((tag) => <span>{tag}</span>)}
