--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,6 +5,12 @@ main {
   gap: 3rem;
 }
 
+.intro_section {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+
 .project_container {
   display: flex;
 	flex-direction: column;
