fix: added links to nav icons

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,10 +1,8 @@
 ---
-import { Icon } from "astro-icon/components";
 import "./footer.css"
-
 ---
 
 <footer>
 	<span>&#169; Tonie.</span>
-	<a href="https://www.buymeacoffee.com/tonievictor" target="_blank">Coffee ☕</a>
+	<a href="https://www.buymeacoffee.com/tonievictor" target="_blank">Coffee? ☕</a>
 </footer>
