--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -11,9 +11,16 @@ import "./nav.css"
 
 	<!-- socials -->
 	<div class="nav__socials">
-			<Icon name="mdi:github" href="https://github.com/tonie-ng" target="_blank" class="social_link"/>
-			<Icon name="mdi:twitter" href="https://twitter.com/tonie_ng" target="_blank" class="social_link"/>
-			<Icon name="mdi:email" href="mailto:toniedevng@gmail.com" class="social_link"/>
+		<a href="https://github.com/tonie-ng" target="_blank">
+			<Icon name="mdi:github" class="social_link"/>
+		</a>
+
+		<a href="https://twitter.com/tonie_ng" target="_blank">
+			<Icon name="mdi:twitter" class="social_link"/>
+		</a>
+
+		<a href="mailto:toniedevng@gmail.com" target="_blank">
+			<Icon name="mdi:email" class="social_link"/>
 		</a>
 	</div>
 </nav>
