feat: added rss feed

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,6 +13,7 @@ import "./header.css"
 		<a href="/" class="nav_link">~/home</a>
 		<a href="/blog" class="nav_link">~/blog</a>
 		<a href="/live" target="_blank" class="nav_link">~/live</a>
+		<a href="/rss.xml" class="nav_link">~/rss</a>
 	</div>
 	</div>
 </header>
