--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -59,10 +59,17 @@ main {
 	background-color: #1a1a1a;
 	font-weight: 400;
   filter: brightness(130%);
-	padding: 0rem 0.8rem;
+	padding: 0 0.95rem;
 	font-size: .8rem;
 	opacity: .6;
 	color: white;
-	border-radius: 0.8rem;
+	border-radius: 2rem;
 	box-shadow: 0 1 2px rgba(0, 0, 0, 0.5);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.project_tags span:hover {
+  filter: brightness(100%);
 }
