--- a/src/layout/blog-layout.css
+++ b/src/layout/blog-layout.css
@@ -1,7 +1,7 @@
 main {
   padding: 2rem var(--padding-x-lg);
   display: flex;
-  gap: 2rem;
+  gap: 1.5rem;
   flex-direction: column;
 }
 
@@ -11,19 +11,19 @@ main {
   flex-direction: column;
 }
 
-.top p,
 .top time {
   opacity: 0.7;
 }
 
 .top h1 {
-  font-size: 2.2rem;
+  font-size: 1.85rem;
   font-weight: 900;
 }
 
 .top_image {
   width: 100%;
-  height: 35rem;
+	height: 100%;
+  max-height: 28rem;
   border-radius: 0.5rem;
 }
 
@@ -37,21 +37,24 @@ main {
 @media screen and (max-width: 1024px) {
   .top_image {
     width: 100%;
-    height: 25rem;
+		height: 100%;
+    max-height: 25rem;
   }
 }
 
 @media screen and (max-width: 768px) {
   .top_image {
     width: 100%;
-    height: 20rem;
+		height: 100%;
+    max-height: 20rem;
   }
 }
 
 @media screen and (max-width: 480px) {
   .top_image {
     width: 100%;
-    height: 15rem;
+		height: 100%;
+		max-height: 10rem;
   }
 
 	main {
