chore: updated social profile links (github and twitter)

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -11,11 +11,11 @@ import "./nav.css"
 
 	<!-- socials -->
 	<div class="nav__socials">
-		<a href="https://github.com/tonie-ng" target="_blank">
+		<a href="https://github.com/tonievictor" target="_blank">
 			<Icon name="mdi:github" class="social_link"/>
 		</a>
 
-		<a href="https://twitter.com/tonie_ng" target="_blank">
+		<a href="https://twitter.com/victortonie" target="_blank">
 			<Icon name="mdi:twitter" class="social_link"/>
 		</a>
 
