--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -108,7 +108,7 @@ section {
 
 @media screen and (max-width: 480px) {
 	body {
-		font-size: 17px;
+		font-size: 1rem;
 		line-height: 1.5rem;
 	}
 
