--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -6,6 +6,7 @@ nav {
 	padding: 1rem var(--padding-x-lg);
 	position: sticky;
 	top: 0;
+	max-width: 48rem;
 	background-color: #1a1a1a;
 	border-bottom: 1px solid #e5e5e520;
 	z-index: 1;
