--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,7 +15,7 @@
 }
 
 :root {
-	--padding-x-lg: 18rem;
+	--padding-x-lg: 0rem;
 	--highlight-color: #f19e1a;
 }
 
@@ -31,9 +31,11 @@ html {
 	scroll-behavior: smooth;
 }
 
+main {
+	width: 100%;
+}
+
 body {
-	padding: 0;
-	margin: 0;
 	overflow-x: hidden;
 	color: #f8f9fa;
 	font-optical-sizing: auto;
@@ -46,6 +48,10 @@ body {
 	transition-property: all;
 	transition-timing-function: cubic-bezier(.4, 0, .2, 1);
 	transition-duration: .15s;
+	max-width: 48rem;
+	flex-direction: column;
+	margin: auto;
+	display: flex;
 }
 
 h1,
