--- a/src/layout/main-layout.astro
+++ b/src/layout/main-layout.astro
@@ -12,7 +12,7 @@ type Props = {
 }
 let { title, description, image, tags, showfooter} =  Astro.props as Props;
 if (!showfooter) showfooter = "true";
-if (!tags) tags = "tonie, victor, developer, software, engineer, nwanochi, chisom, python, c, typescript, golang, nodejs, gleam";
+if (!tags) tags = "tonie, victor, developer, software, engineer, nwanochi, chisom, python, c, typescript, golang, nodejs, gleam, rust, backend";
 ---
 
 <html lang="en">
