--- a/src/layout/seo-head.astro
+++ b/src/layout/seo-head.astro
@@ -7,6 +7,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 <!-- Primary -->
 <meta name="generator" content={Astro.generator} />
 <meta name="title" content={title} />
+<meta name="author" content="Tonie Victor">
 <meta name="description" content={description} />
 <meta name="keywords" content={keywords} />
 <meta charset="utf-8" />
@@ -36,7 +37,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
-<meta name="twitter:site" content="@tonie_ng" />
-<meta name="twitter:creator" content="@tonie_ng" />
+<meta name="twitter:site" content="@victortonie" />
+<meta name="twitter:creator" content="@victortonie" />
 
 <title>{title}</title>
