--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,8 @@
 main {
-  padding: 1.5rem var(--padding-x-lg);
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
+	padding: 1.5rem var(--padding-x-lg);
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
 }
 
 .intro_section {
@@ -12,21 +12,21 @@ main {
 }
 
 .project_container {
-  display: flex;
+	display: flex;
 	flex-direction: column;
 	gap: 1.5rem;
 }
 
 .project {
-  display: flex;
+	display: flex;
 	flex-direction: column;
-  gap: 0.375rem;
+	gap: 0.375rem;
 	align-items: baseline;
 }
 
 .project_title {
-  color: rgb(245, 245, 245);
-  font-weight: 500;
+	color: rgb(245, 245, 245);
+	font-weight: 500;
 	display: flex;
 	gap: 0.4rem;
 	align-items: center;
@@ -43,9 +43,9 @@ main {
 }
 
 .project p {
-  font-weight: 300;
-  font-size: 0.9rem;
-  width: 100%;
+	font-weight: 300;
+	font-size: 0.9rem;
+	width: 100%;
 	opacity: 0.75;
 }
 
@@ -53,12 +53,13 @@ main {
 	display: flex;
 	align-items: flex-start;
 	gap: 0.5rem;
+	flex-wrap: wrap;
 }
 
 .project_tags span {
 	background-color: #1a1a1a;
 	font-weight: 400;
-  filter: brightness(130%);
+	filter: brightness(130%);
 	padding: 0 0.95rem;
 	font-size: .8rem;
 	opacity: .6;
@@ -66,10 +67,12 @@ main {
 	border-radius: 2rem;
 	box-shadow: 0 1 2px rgba(0, 0, 0, 0.5);
 	display: flex;
+	cursor: pointer;
+	width: max-content;
 	align-items: center;
 	justify-content: center;
 }
 
 .project_tags span:hover {
-  filter: brightness(100%);
+	filter: brightness(100%);
 }
