--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -31,8 +31,9 @@
 .blog h5 {
 	width: max-content;
 	line-height: 1.75rem;
+	margin-top: 2.5rem;
+	margin-bottom: 2rem;
 }
-
 
 .blog ul,
 .blog ol {
@@ -105,38 +106,13 @@
 
 .blog img {
 	width: 100%;
-	height: 25rem;
-	object-fit: contain;
-	border-radius: 0.5rem;
-}
-
-@media screen and (max-width: 768px) {
-	.blog img {
-		width: 100%;
-		height: 100%;
-		max-height: 20rem;
-		border-radius: 0.5rem;
-		object-fit: cover;
-	}
-}
-
-@media screen and (max-width: 480px) {
-	.blog img {
-		width: 100%;
-		height: 100%;
-		max-height: 10rem;
-		border-radius: 0.5rem;
-		object-fit: cover;
-	}
+	height: 100%;
+	max-height: 30rem;
+	/*object-fit: contain;*/
+	/*border-radius: 0.5rem;*/
 }
 
 .blog p,
-.blog h1,
-.blog h2,
-.blog h3,
-.blog h4,
-.blog h5,
-.blog h6,
 .blog pre,
 .blog ul,
 .blog ol,
