--- a/src/layout/blog-layout.astro
+++ b/src/layout/blog-layout.astro
@@ -10,9 +10,7 @@ import Back from "../components/Back.astro";
 
 type Props = CollectionEntry<'articles'>['data'];
 
-let {title, heroImage, pubDate, tags, description, heroImageAlt} = Astro.props as Props;
-
-const tagsArr = tags.split(",").splice(0, 3);
+let {title, tags, heroImage, pubDate, keywords, description, heroImageAlt} = Astro.props as Props;
 ---
 
 <!DOCTYPE html>
@@ -22,7 +20,7 @@ const tagsArr = tags.split(",").splice(0, 3);
 		<meta name="robots" content="index, follow" />
 		<meta name="googlebot" content="index, follow" />
 		<meta name="google" content="notranslate" />
-		<SeoHead title={title} description={description} image={heroImage} keywords={tags}/>
+		<SeoHead title={title} description={description} image={heroImage} keywords={keywords}/>
 	</head>
 
 	<body>
@@ -43,12 +41,10 @@ const tagsArr = tags.split(",").splice(0, 3);
             </section>
         <slot/>
 							<div class="post_tags">
-								{tagsArr.map((t) => 
+								{tags.map((t) => 
 									<span>{t}</span>
 								)}
         </main>
 				<Footer />
 	</body>
 </html>
-
-
