wrote mapreduce review

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import { ProjectsData } from "../data/projects";
   <main>
     <section class="intro_section">
 			<p>
-				Hi! My name is Tonie Victor, I'm a software developer with a primary interest in system level software, networking and backend infrastructure.
+				Hi! My name is Tonie Victor, I'm a software developer with a primary interest in low level software, networking, backend infrastructure and distributed sytsems.
 			</p>
 			<p>
 				I recently started streaming my coding sessions on <a style={{"color": "rgb(119, 44, 232)"}} href="https://www.twitch.tv/tonievictor" target="_blank">Twitch</a> - stop by sometime! and I maintain a <a href="/blog">blog</a> where I share my experiences and understanding of software technologies.
