fix indexing issue by explicitly adding the index, follow property

--- a/src/layout/main-layout.astro
+++ b/src/layout/main-layout.astro
@@ -18,6 +18,8 @@ console.log(keywords)
 
 <html lang="en">
 	<head>
+		<meta name="robots" content="index, follow" />
+		<meta name="googlebot" content="index, follow" />
 		<SeoHead title={title} description={description} image={image} keywords={keywords}/>
 	</head>
 	<body>
