changed email address

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -19,7 +19,7 @@ import "./nav.css"
 			<Icon name="mdi:twitter" class="social_link"/>
 		</a>
 
-		<a href="mailto:victor@tonie.me" target="_blank">
+		<a href="mailto:toniedevng@gmail.com" target="_blank">
 			<Icon name="mdi:email" class="social_link"/>
 		</a>
 	</div>
