--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -10,10 +10,15 @@
 }
 
 .post a {
-	font-size: 1.2rem;
-	font-weight: 600;
-	color: white;
+	/* font-size: 1.2rem; */
+	font-weight: 500;
+	color: rgb(245, 245, 245);
 	transition: all 100ms ease;
+	display: flex;
+	gap: 0.4rem;
+	align-items: center;
+	text-decoration: underline;
+
 }
 
 .post p {
@@ -128,6 +133,7 @@
 
 
 @media screen and (max-width: 480px) {
+
 	.blog img,
 	.blog pre {
 		width: 99.5%;
