--- a/src/pages/blog/tags/[tag].astro
+++ b/src/pages/blog/tags/[tag].astro
@@ -19,7 +19,7 @@ export async function getStaticPaths() {
 
 const { tag } = Astro.params;
 const posts = (await getCollection('articles', ({ data }) => data.draft !== true ))
-	?.filter((p) => p.data.tags.includes(tag))
+	?.filter((p) => p.data.tags.includes(tag.replace("-", " ")))
 	.sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
 ---
 <MainLayout title=`Blog | Tag: ${tag}` description="Tonie - Software Developer">
