--- a/src/layout/blog-layout.astro
+++ b/src/layout/blog-layout.astro
@@ -20,7 +20,7 @@ let {title, tags, heroImage, pubDate, keywords, description, heroImageAlt} = Ast
 		<meta name="robots" content="index, follow" />
 		<meta name="googlebot" content="index, follow" />
 		<meta name="google" content="notranslate" />
-		<SeoHead title={title} description={description} image={heroImage} keywords={keywords}/>
+		<SeoHead title={`Blog | ${title}`} description={description} image={heroImage} keywords={keywords}/>
 	</head>
 
 	<body>
