--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,7 +4,7 @@ import Nav from "../components/Nav.astro"
 import Back from "../components/Back.astro"
 ---
 
-<MainLayout title="404" description="Page not found" showfooter="false">
+<MainLayout title="Tonie | 404" description="Page not found" showfooter="false">
   <Nav />
 	<div class="back_div">
 		<Back text="Back" url="/"></Back>
