--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -6,15 +6,30 @@ footer {
   font-size: 0.9rem;
 }
 
-footer span  {
+footer span {
   opacity: 0.5;
   line-height: 150%;
 }
 
-footer a {
-  opacity: 0.5;
-  line-height: 150%;
+footer button {
+  border: none;
+  font-weight: 500;
+  font-size: .9rem;
+  padding: 7px 12px;
+  border-radius: 2rem;
+  box-shadow: 0 1 5px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+  width: max-content;
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: .3rem;
+  color: #2C2C2C;
+  background-color: #fca311;
+
+	padding: .4rem 0.95rem;
+}
+
+footer button:hover {
+  filter: brightness(90%);
 }
