--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,9 @@ import { ProjectsData } from "../data/projects";
 				I recently started streaming my coding sessions on <a style={{"color": "rgb(119, 44, 232)"}} href="https://www.twitch.tv/tonievictor" target="_blank">Twitch</a> - stop by sometime! and I maintain a <a href="/blog">blog</a> where I share my experiences and understanding of software technologies.
 			</p>
 			<p>
+        I'm currently open to full-time, part-time, or contract opportunities, especially in Golang and backend-heavy projects. Feel free to reach out at <a href="mailto:victor@tonie.me" target="_blank">victor@tonie.me</a> or book a chat using the calendar link at the bottom right of this page.
+			</p>
+			<p>
 				Outside tinkering with code, I read books, play video games, listen to music and I'm fairly adept at playing football.
 			</p>
     </section>
