tweak meta info

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Header from '../components/Header.astro';
 import { ProjectsData } from "../data/projects";
 ---
 
-<MainLayout title="Tonie" description="Tonie - Software Developer">
+<MainLayout title="Tonie Victor" description="">
   <Nav />
 	<Header />
   <main>
